--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,4 @@
-version: "3.8"
-
+# In docker-compose.yml
 services:
   web:
     build:
@@ -11,20 +10,4 @@ services:
       - ./app:/app
     networks:
       - chatbot-net
-
-  ollama:
-    build:
-      context: ./ollama
-      dockerfile: Dockerfile
-    ports:
-      - "11434:11434"
-    volumes:
-      - ./ollama:/ollama
-    networks:
-      - chatbot-net
-    entrypoint: ["/usr/bin/bash", "pull-llama3.sh"]
-
-networks:
-  chatbot-net:
-    driver: bridge
-
+    command: uvicorn api:app --host '0.0.0.0' --port 5005  # Change this line
