--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,23 +1,17 @@
-# Start with a Python base image
-FROM python:3.11-slim AS base
+# Dockerfile in /app
+FROM python:3.9-slim
 
-# Install necessary dependencies
-RUN apt-get update -y && apt-get install -y \
-    && apt-get clean \
-    && rm -rf /var/lib/apt/lists/*
+WORKDIR /app
 
-# Set the working directory for the application
-ENV APP_HOME /app
-WORKDIR $APP_HOME
-
-# Copy the FastAPI application files
-COPY . ./
-
-# Install the required Python packages
+# Install dependencies
+COPY requirements.txt .
 RUN pip install -r requirements.txt
 
-# Expose the port the FastAPI app will run on
+# Copy the application files
+COPY . .
+
+# Expose port 5005 for FastAPI app
 EXPOSE 5005
 
-# Command to run the application
-CMD exec uvicorn app:app --host '0.0.0.0' --port 5005
+# Command to run the FastAPI app with uvicorn
+CMD ["uvicorn", "api:app", "--host", "0.0.0.0", "--port", "5005"]
