--- a/ollama/Dockerfile
+++ b/ollama/Dockerfile
@@ -1,20 +1,44 @@
-# Dockerfile in /ollama
-FROM ubuntu:20.04
+# Stage 1: Build the binary
+FROM golang:alpine AS builder
 
-# Install necessary dependencies (you can adjust based on your needs)
-RUN apt-get update && apt-get install -y \
-    bash \
-    curl \
-    && rm -rf /var/lib/apt/lists/*
+# Install required dependencies
+RUN apk add --no-cache git build-base cmake bash
 
-# Copy Ollama-related files
-COPY pull-llama3.sh /ollama/
+# Set the working directory within the container
+WORKDIR /app
 
-# Make sure the script is executable
-RUN chmod +x /ollama/pull-llama3.sh
+# Clone the source code from the GitHub repository
+RUN git clone https://github.com/jmorganca/ollama.git .
 
-# Set working directory to /ollama
-WORKDIR /ollama
+# Build the binary with static linking
+RUN go generate ./... \
+    && go build -ldflags '-linkmode external -extldflags "-static"' -o .
 
-# Command to run the Ollama script
-CMD ["./pull-llama3.sh"]
+# Stage 2: Create the final image
+FROM alpine
+
+ENV OLLAMA_HOST "0.0.0.0"
+
+# Install required runtime dependencies
+RUN apk add --no-cache libstdc++ curl
+
+# NOTE: UNCOMMENT THIS IF YOU'RE CHANGING THE MODELFILE
+# COPY Modelfile /Modelfile
+
+# Copy the custom entry point script into the container
+COPY entrypoint.sh /entrypoint.sh
+
+# Make the script executable
+RUN chmod +x /entrypoint.sh
+
+# Create a non-root user
+ARG USER=ollama
+ARG GROUP=ollama
+RUN addgroup $GROUP && adduser -D -G $GROUP $USER
+
+# Copy the binary from the builder stage
+COPY --from=builder /app/ollama /bin/ollama
+
+USER $USER:$GROUP
+
+ENTRYPOINT ["/entrypoint.sh"]
